--- a/app/src/main/res/layout/activity_modify_movie.xml
+++ b/app/src/main/res/layout/activity_modify_movie.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ModifyMovie">
+    tools:context=".ModifyMovieActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
