--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="spinnerItems " />
+        android:entries="@array/spinnerItems" />
 
     <LinearLayout
         android:layout_width="match_parent"
