All Working without Enhanced

--- a/app/src/main/res/layout/activity_show_movies.xml
+++ b/app/src/main/res/layout/activity_show_movies.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ShowMoviesActivity">
+    tools:context=".ShowMoviesActivity"
+    android:layout_margin="20dp">
 
     <ToggleButton
         android:id="@+id/tbAge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ToggleButton" />
+        android:text="ToggleButton"
+        android:textOff="Show All Movies"
+        android:textOn="Show Only PG13" />
 
     <ListView
         android:id="@+id/lv"
