--- a/app/src/main/res/layout/activity_modify_movie.xml
+++ b/app/src/main/res/layout/activity_modify_movie.xml
@@ -5,17 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ModifyMovieActivity">
+    tools:context=".ModifyMovieActivity"
+    android:layout_margin="20dp">
 
     <TextView
         android:id="@+id/ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Movie ID"/>
-    <TextView
+
+    <EditText
+        android:id="@+id/tvId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""/>
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="textPersonName"
+        android:text="Name" />
 
     <TextView
         android:layout_width="wrap_content"
