--- a/app/src/main/res/layout/activity_modify_movie.xml
+++ b/app/src/main/res/layout/activity_modify_movie.xml
@@ -8,11 +8,19 @@
     tools:context=".ModifyMovieActivity"
     android:layout_margin="20dp">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="500px"
+        app:srcCompat="@drawable/camera"
+        android:layout_marginBottom="80px"/>
+
     <TextView
         android:id="@+id/ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Movie ID"/>
+        android:text="Movie ID"
+        android:textColor="@color/teal_200"/>
 
     <EditText
         android:id="@+id/tvId"
@@ -21,42 +29,52 @@
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="Name"
+        android:textColor="@color/teal_700"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Movie Title" />
+        android:text="Movie Title"
+        android:textColor="@color/teal_200"/>
     <EditText
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="@color/teal_700"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Genre" />
+        android:text="Genre"
+        android:textColor="@color/teal_200"/>
     <EditText
         android:id="@+id/tvGenre"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="@color/teal_700"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Year" />
+        android:text="Year"
+        android:textColor="@color/teal_200"/>
     <EditText
         android:id="@+id/tvYear"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="@color/teal_700"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rating" />
+        android:text="Rating"
+        android:textColor="@color/teal_200"/>
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/spinnerItems" />
+        android:entries="@array/spinnerItems"
+        android:layout_marginTop="50px"
+        android:paddingVertical="20px"/>
 
     <LinearLayout
         android:layout_width="match_parent"
