--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:text="INSERT"/>
+            android:text="INSERT"
+            android:backgroundTint="@color/green"/>
 
         <Button
             android:id="@+id/btnShow"
@@ -80,7 +81,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:text="SHOW LIST"/>
+            android:text="SHOW LIST"
+            android:backgroundTint="@color/green"/>
     </LinearLayout>
 
 
